fix profile snippet out of bounds

--- a/app/assets/stylesheets/components/answer/answer_item.scss
+++ b/app/assets/stylesheets/components/answer/answer_item.scss
@@ -3,7 +3,7 @@
     flex-direction: column; 
     justify-content: space-between; 
     align-items: space-between;     
-    flex-grow: 1; 
+    // flex-grow: 1; 
 }
 
 .answer_item-footer {
@@ -17,3 +17,4 @@
 .answer_item-button-console {
     display: flex; 
 }
+
